docs/src/main.css
:root {
  font-family:
    "Open Sans",
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    "Open Sans",
    "Helvetica Neue",
    sans-serif;
  line-height: 1.5;
  font-weight: 400;
  color-scheme: light dark;
  color: var(--text-primary);
  background-color: var(--background-primary);
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  /* Base Color */
  --color-base: #ae6bff;

  /* Schema scale (50-1000) */
  --color-50: #fdfaff;
  --color-100: #f2e6ff;
  --color-150: #e6d1ff;
  --color-200: #dbbdff;
  --color-250: #d0a8ff;
  --color-300: #c594ff;
  --color-350: #b97fff;
  --color-400: #ae6bff;
  --color-450: #a162ec;
  --color-500: #9459da;
  --color-550: #8850c7;
  --color-600: #7b47b4;
  --color-650: #6e3ea2;
  --color-700: #61368f;
  --color-750: #542d7c;
  --color-800: #47246a;
  --color-850: #3b1b57;
  --color-900: #2e1244;
  --color-950: #210932;
  --color-1000: #14001f;
}

* {
  outline: none;

  scrollbar-width: thin;
  scrollbar-color: gray transparent;
}

body {
  margin: 0;
  min-width: 320px;
  min-height: 100vh;
}

ul {
  list-style: initial;
  margin-block-end: 0;
  padding-inline-start: 1.5em;
}

li::marker {
  font-size: 0.75em;
}

table {
  margin-block-start: 1em;
  width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
  text-align: start;
}

th {
  padding: 0.75rem 0.5em;
  text-align: start;
  background-color: var(--background-secondary);
}

th:first-child {
  border-top-left-radius: 0.5rem;
  border-bottom-left-radius: 0.5rem;
}

th:last-child {
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

td {
  padding: 0.5em;
  border-bottom: 2px solid var(--background-secondary);
}

.shiki,
.shiki span {
  font-family:
    ui-monospace,
    SFMono-Regular,
    SF Mono,
    Menlo,
    Consolas,
    Liberation Mono,
    monospace;
  background-color: var(--background-secondary) !important;
}

@media (prefers-color-scheme: light) {
  :root {
    --background-primary: var(--color-100);
    --background-secondary: var(--color-150);
    --text-primary: var(--color-1000);
    --text-secondary: var(--color-700);
    --text-highlight: var(--color-base);
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-50: #14001f;
    --color-100: #210932;
    --color-150: #2e1244;
    --color-200: #3b1b57;
    --color-250: #47246a;
    --color-300: #542d7c;
    --color-350: #61368f;
    --color-400: #6e3ea2;
    --color-450: #7b47b4;
    --color-500: #8850c7;
    --color-550: #9459da;
    --color-600: #a162ec;
    --color-650: #ae6bff;
    --color-700: #b97fff;
    --color-750: #c594ff;
    --color-800: #d0a8ff;
    --color-850: #dbbdff;
    --color-900: #e6d1ff;
    --color-950: #f2e6ff;
    --color-1000: #fdfaff;

    --background-primary: var(--color-50);
    --background-secondary: var(--color-100);
    --text-primary: var(--color-1000);
    --text-secondary: var(--color-700);
    --text-highlight: var(--color-500);
  }

  .shiki,
  .shiki span {
    color: var(--shiki-dark) !important;
    font-style: var(--shiki-dark-font-style) !important;
    font-weight: var(--shiki-dark-font-weight) !important;
    text-decoration: var(--shiki-dark-text-decoration) !important;
  }
}

